--- a/htdocs/css/style.less
+++ b/htdocs/css/style.less
@@ -6,6 +6,7 @@
 body {
     background-color: lightgray;
     margin-top: 70px;
+    overflow-x: scroll;
 }
 .page {
     min-height: 700px;
@@ -85,3 +86,183 @@ body {
 .leftmessage{
     font-size: 45px;
 }
+.calendarimagediv{
+    img{
+        margin: 0 auto;
+        display: block;
+    }
+
+}
+.calendar{
+    border: 2px solid black;
+    margin: 0 auto;
+    margin-bottom: 80px;
+    overflow-x: scroll;
+    th {
+        border: 1px solid gray;
+        text-align: center;
+    }
+    td {
+        height: 110px;
+        border: 1px solid gray;
+        background-color: #a2a2a2;
+    }
+    .calday {
+        background-color: white;
+        min-width: 110px;
+    }
+    .caldiv {
+        position: relative;
+        height: 30px;
+        width: 30px;
+        background-color: #cecece;
+        margin-top: -54px;
+        text-align: center;
+        font-size: 20px;
+    }
+    .caldivred {
+        position: relative;
+        height: 30px;
+        width: 30px;
+        background-color: #da8484;
+        margin-top: -54px;
+        text-align: center;
+        font-size: 20px;
+    }
+    .caldivthisred {
+        position: relative;
+        height: 30px;
+        width: 30px;
+        background-color: #da8484;
+        // border-bottom: 1px solid rgba(61,120,191,1);
+        // border-right: 1px solid rgba(61,120,191,1);
+        -webkit-box-shadow: 1px 1px 5px 1px rgba(61,120,191,1);
+        -moz-box-shadow: 1px 1px 5px 1px rgba(61,120,191,1);
+        box-shadow: 1px 1px 5px 1px rgba(61,120,191,1);
+        margin-top: -54px;
+        text-align: center;
+        font-size: 20px;
+    }
+    .calweek {
+        width: 20px;
+        background-color: #505050;
+        text-align: center;
+        color: white;
+    }
+    .thisday{
+        background-color: white;
+        -webkit-box-shadow: inset 0 0 5px 1px rgba(61,120,191,1);
+        -moz-box-shadow: inset 0 0 5px 1px rgba(61,120,191,1);
+        box-shadow: inset 0 0 5px 1px rgba(61,120,191,1);
+    }
+    .caldivthis {
+        position: relative;
+        height: 30px;
+        width: 30px;
+        background-color: #cecece;
+        -webkit-box-shadow: 1px 1px 5px 1px rgba(61,120,191,1);
+        -moz-box-shadow: 1px 1px 5px 1px rgba(61,120,191,1);
+        box-shadow: 1px 1px 5px 1px rgba(61,120,191,1);
+        margin-top: -54px;
+        text-align: center;
+        font-size: 20px;
+    }
+    .helgdiv {
+        position: relative;
+        height: 30px;
+        // width: 30px;
+        margin-top: -29px;
+        text-align: center;
+        font-size: 8px;
+        font-style: italic;
+        margin-left: 40px;
+        img {
+            // margin-left: -14px;
+            float: left;
+            margin-top: 5px;
+        }
+        .flaggtext{
+            text-align: left;
+            margin-top: 5px;
+            padding-left: 1px;
+        }
+        .afton{
+            text-align: left;
+            margin-top: 5px;
+            padding-left: 1px;
+        }
+    }
+    .namesdiv{
+        font-size: 8px;
+        margin-left: 3px;
+        margin-bottom: -100px;
+    }
+
+    // .helgdagsaftondiv{
+    //     position: relative;
+    //     height: 30px;
+    //     margin-top: -29px;
+    //     text-align: center;
+    //     font-size: 8px;
+    //     font-style: italic;
+    //     margin-left: 40px;
+    //
+    // }
+}
+// .calprevnextdiv{
+//     height: 574px;
+//     padding-top: 250px;
+//     opacity: 0.5;
+//     background-color: #bdbdbd;
+//     width: 90px;
+//     padding-left: 20px;
+//     padding-right: 20px;
+//
+//
+//
+// }
+.glyphicon {
+    font-size: 30px;
+    color: #505050;
+    border-radius: 5px;
+
+
+}
+.caltitle {
+    width: 200px;
+}
+.prevnextdiv{
+    width: 40px;
+}
+.calendarheader {
+    // margin-left: 70px;
+    font-size: 35px;
+    // font-weight: bold;
+    display: inline;
+}
+.left{
+    float: left;
+}
+.right{
+    float: right;
+}
+.calnextarrow{
+    margin-left: -20px;
+}
+
+.idagbtn {
+    margin-bottom: 10px;
+    background-color: #284262;
+    color: white;
+
+
+}
+.idagbtndiv{
+    padding-left: 85px;
+    padding-top: 8px;
+}
+.pillow-50{
+    height: 50px;
+}
+
+//
