Last commit for kmom02

--- a/htdocs/css/style.less
+++ b/htdocs/css/style.less
@@ -258,11 +258,16 @@ body {
 
 }
 .idagbtndiv{
-    padding-left: 85px;
+    padding-left: 100px;
     padding-top: 8px;
 }
 .pillow-50{
     height: 50px;
+}
+
+.reportwell {
+    background-color: #c9c9c9;
+    padding: 30px 60px;
 }
 
 //
