--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -209,9 +209,13 @@ body {
   color: white;
 }
 .idagbtndiv {
-  padding-left: 85px;
+  padding-left: 100px;
   padding-top: 8px;
 }
 .pillow-50 {
   height: 50px;
+}
+.reportwell {
+  background-color: #c9c9c9;
+  padding: 30px 60px;
 }
