--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 body {
   background-color: lightgray;
   margin-top: 70px;
@@ -7,19 +8,14 @@ body {
   min-height: 700px;
 }
 .navbar {
+  font-family: 'Open Sans', sans-serif;
   -webkit-box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.75);
   box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.75);
   background-color: #b4b4b4;
 }
-.navbar-default .navbar-nav > li a {
-  color: black;
-}
-.navbar-default .navbar-nav > li a:visited {
-  color: black;
-}
-.navbar-default .navbar-nav > li a:hover {
-  color: #7b0202;
+.navbar-nav {
+  width: 900px;
 }
 .navbar-default {
   border-bottom: 3px solid #7b0202;
@@ -212,10 +208,76 @@ body {
   padding-left: 100px;
   padding-top: 8px;
 }
+.pillow-20 {
+  height: 20px;
+}
 .pillow-50 {
   height: 50px;
+}
+.pillow-200 {
+  height: 200px;
+}
+.pillow-100 {
+  height: 100px;
 }
 .reportwell {
   background-color: #c9c9c9;
   padding: 30px 60px;
+}
+.nav > li > a.notnavacitve {
+  color: black;
+}
+.nav > li > a.notnavacitve:hover {
+  color: #d5d5d5;
+  background-color: #745352;
+}
+.nav > li > a.navactive {
+  color: white;
+  background-color: #7B0202;
+}
+.nav > li > a.navactive:hover {
+  background-color: #4B0000;
+  color: #9e9e9e;
+}
+.navbar-brand > img {
+  display: block;
+  margin-top: -10px;
+}
+.loginlink {
+  float: right;
+}
+.formerror {
+  color: #a83d3d    ;
+  font-size: 12px;
+}
+.modal-header {
+  background-color: #7B0202;
+  color: white;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  font-weight: bold;
+}
+.modal-body {
+  background-color: #d2d2d2;
+}
+.modal-label {
+  font-weight: normal;
+}
+.modal-footer {
+  padding: 30px;
+  text-align: right;
+  border-top: 2px solid #7b0202;
+  background-color: #4E4E4E;
+  height: 90px;
+}
+.modal-subheader {
+  height: 30px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #7b0202;
+}
+.profildiv {
+  overflow: hidden;
+  width: 180px;
+  height: 180px;
+  background-color: darkgray;
 }
