--- a/htdocs/css/adminstyle.less
+++ b/htdocs/css/adminstyle.less
@@ -22,7 +22,7 @@ a:visited {
         background-color: #383838;
         color: #b77e7e;
         th {
-            padding: 0 25px;
+            padding: 0 10px;
             margin: 0;
             // max-height: 20px;
         }
@@ -35,11 +35,14 @@ a:visited {
         margin-bottom: 5px;
         td {
             height: 50px;
-            padding: 0 25px;
+            padding: 0 10px;
         }
     }
     input {
         color: black;
+    }
+    .datetimecell {
+        width: 185px;
     }
 }
 .right {
@@ -84,4 +87,15 @@ span.glyphiconarrow {
 }
 .pillow-20{
     height: 20px;
+}
+textarea.form-control {
+    height: 200px;
+}
+.terminateinfo {
+    color: #ffb69e;
+}
+.contenttable{
+    th {
+        max-height: 20px;
+    }
 }
