--- a/htdocs/css/style.less
+++ b/htdocs/css/style.less
@@ -353,3 +353,26 @@ body {
 .well{
     background-color: #b4b4b4;
 }
+
+textarea.form-control {
+    height: 250px;
+}
+
+.white {
+    background-color: white;
+}
+.previewdiv {
+    background-color: #dedede;
+    padding: 10px 50px;
+    margin-bottom: 50px;
+
+}
+hr {
+    border-top: 1px solid #7b0202;
+}
+
+img[alt='size_50'] {
+  width: 50%;
+  border: none;
+  background: none;
+}
