webbshop starting to come together

--- a/htdocs/css/adminstyle.less
+++ b/htdocs/css/adminstyle.less
@@ -99,3 +99,65 @@ textarea.form-control {
         max-height: 20px;
     }
 }
+
+.nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover {
+    background-color: #808080;
+    color: white;
+}
+.nav > li > a:hover {
+    background-color: #d5d5d5;
+    color: black;
+}
+.tabcontent {
+    padding: 20px 10px;
+}
+
+.admintable.producttable {
+    width: 100%;
+    td {
+        vertical-align: top;
+        border-bottom: 1px solid #787878;
+        padding: 10px 10px;
+    }
+}
+
+.admintable.ordertable {
+    td {
+        max-width: 200px;
+        border-bottom: 1px solid #787878;
+    }
+}
+.orderviewtable {
+    background-color: white;
+    color: black;
+
+    .orderviewspace{
+        min-width: 100px;
+    }
+    .orderviewinfo {
+        min-width: 200px;
+        padding-left: 15px;
+        padding-top: 10px;
+    }
+    .orderviewmargincell {
+        min-width: 10px;
+    }
+    tr {
+        border-bottom: 1px dotted #bad8ed;
+    }
+    .orderviewhrtr {
+        border-bottom: 2px solid black;
+    }
+    .orderviewhrtrlight {
+        border-bottom: 2px solid #b9b9b9;
+    }
+    .rightalign {
+        text-align: right;
+    }
+}
+.text-muted-admin {
+    color: #c2c2c2;
+}
+.text-highlight-admin {
+    color: #c3ffb1;
+}
