--- a/htdocs/css/adminstyle.css
+++ b/htdocs/css/adminstyle.css
@@ -91,3 +91,61 @@ textarea.form-control {
 .contenttable th {
   max-height: 20px;
 }
+.nav-tabs > li.active > a,
+.nav-tabs > li.active > a:focus,
+.nav-tabs > li.active > a:hover {
+  background-color: #808080;
+  color: white;
+}
+.nav > li > a:hover {
+  background-color: #d5d5d5;
+  color: black;
+}
+.tabcontent {
+  padding: 20px 10px;
+}
+.admintable.producttable {
+  width: 100%;
+}
+.admintable.producttable td {
+  vertical-align: top;
+  border-bottom: 1px solid #787878;
+  padding: 10px 10px;
+}
+.admintable.ordertable td {
+  max-width: 200px;
+  border-bottom: 1px solid #787878;
+}
+.orderviewtable {
+  background-color: white;
+  color: black;
+}
+.orderviewtable .orderviewspace {
+  min-width: 100px;
+}
+.orderviewtable .orderviewinfo {
+  min-width: 200px;
+  padding-left: 15px;
+  padding-top: 10px;
+}
+.orderviewtable .orderviewmargincell {
+  min-width: 10px;
+}
+.orderviewtable tr {
+  border-bottom: 1px dotted #bad8ed;
+}
+.orderviewtable .orderviewhrtr {
+  border-bottom: 2px solid black;
+}
+.orderviewtable .orderviewhrtrlight {
+  border-bottom: 2px solid #b9b9b9;
+}
+.orderviewtable .rightalign {
+  text-align: right;
+}
+.text-muted-admin {
+  color: #c2c2c2;
+}
+.text-highlight-admin {
+  color: #c3ffb1;
+}
